// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProteomesColumnConfiguration component should render column "busco": busco 1`] = `
<DocumentFragment>
  <div
    class="busco-view"
  >
    <div
      class="busco-view__track"
      style="--s: 37.48185776487663%; --d: 62.00290275761974%; --f: 0.02902757619738752%;"
    />
    <div
      class="busco-view__report"
    >
      n:13780 · primates_odb10
    </div>
    <div>
      C:99.5% (S:37.5% D:62%) F:0% M:0.5%
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "components": components 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        64 more components
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "components": components-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      Chromosome 1
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        64 more components
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "cpd": cpd 1`] = `
<DocumentFragment>
  Outlier (high value)
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "genome_assembly": genome_assembly 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="http://www.ensembl.org/Homo_sapiens/Info/Annotation"
    rel="noopener"
    target="_blank"
  >
    GCA_000001405.29
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "genome_representation": genome_representation 1`] = `
<DocumentFragment>
  Full
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/131567"
  >
    cellular organisms
  </a>
  , 
  <a
    href="/taxonomy/2759"
  >
    Eukaryota (superkingdom)
  </a>
  , 
  <a
    href="/taxonomy/33154"
  >
    Opisthokonta (clade)
  </a>
  , 
  <a
    href="/taxonomy/33208"
  >
    Metazoa (kingdom)
  </a>
  , 
  <a
    href="/taxonomy/6072"
  >
    Eumetazoa (clade)
  </a>
  , 
  <a
    href="/taxonomy/33213"
  >
    Bilateria (clade)
  </a>
  , 
  <a
    href="/taxonomy/33511"
  >
    Deuterostomia (clade)
  </a>
  , 
  <a
    href="/taxonomy/7711"
  >
    Chordata (phylum)
  </a>
  , 
  <a
    href="/taxonomy/89593"
  >
    Craniata (subphylum)
  </a>
  , 
  <a
    href="/taxonomy/7742"
  >
    Vertebrata (clade)
  </a>
  , 
  <a
    href="/taxonomy/7776"
  >
    Gnathostomata (clade)
  </a>
  , 
  <a
    href="/taxonomy/117570"
  >
    Teleostomi (clade)
  </a>
  , 
  <a
    href="/taxonomy/117571"
  >
    Euteleostomi (clade)
  </a>
  , 
  <a
    href="/taxonomy/8287"
  >
    Sarcopterygii (superclass)
  </a>
  , 
  <a
    href="/taxonomy/1338369"
  >
    Dipnotetrapodomorpha (clade)
  </a>
  , 
  <a
    href="/taxonomy/32523"
  >
    Tetrapoda (clade)
  </a>
  , 
  <a
    href="/taxonomy/32524"
  >
    Amniota (clade)
  </a>
  , 
  <a
    href="/taxonomy/40674"
  >
    Mammalia (class)
  </a>
  , 
  <a
    href="/taxonomy/32525"
  >
    Theria (clade)
  </a>
  , 
  <a
    href="/taxonomy/9347"
  >
    Eutheria (clade)
  </a>
  , 
  <a
    href="/taxonomy/1437010"
  >
    Boreoeutheria (clade)
  </a>
  , 
  <a
    href="/taxonomy/314146"
  >
    Euarchontoglires (superorder)
  </a>
  , 
  <a
    href="/taxonomy/9443"
  >
    Primates (order)
  </a>
  , 
  <a
    href="/taxonomy/376913"
  >
    Haplorrhini (suborder)
  </a>
  , 
  <a
    href="/taxonomy/314293"
  >
    Simiiformes (infraorder)
  </a>
  , 
  <a
    href="/taxonomy/9526"
  >
    Catarrhini (parvorder)
  </a>
  , 
  <a
    href="/taxonomy/314295"
  >
    Hominoidea (superfamily)
  </a>
  , 
  <a
    href="/taxonomy/9604"
  >
    Hominidae (family)
  </a>
  , 
  <a
    href="/taxonomy/207598"
  >
    Homininae (subfamily)
  </a>
  , 
  <a
    href="/taxonomy/9605"
  >
    Homo (genus)
  </a>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "mnemonic": mnemonic 1`] = `
<DocumentFragment>
  HUMAN
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="Homo sapiens (Human), taxon ID 9606"
    translate="no"
  >
    Homo sapiens (Human)
  </a>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="Homo sapiens (Human), taxon ID 9606"
    translate="no"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "protein_count": protein_count 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb?query=proteome:UP000005640"
  >
    82,861
  </a>
</DocumentFragment>
`;

exports[`ProteomesColumnConfiguration component should render column "upid": upid 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <span
      class="entry-title__status icon--reference-proteome"
      title="This marks a reference Proteome entry"
    >
      <test-file-stub />
    </span>
    <a
      class="accession"
      href="/proteomes/UP000005640"
    >
      UP000005640
    </a>
  </span>
</DocumentFragment>
`;
